--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<spring-framework.version>2.0.3.RELEASE</spring-framework.version>
   	<hibernate.version>3.6.9.Final</hibernate.version>
 	<slf4j.version>1.7.5</slf4j.version>
+		<java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
